<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

	<item
		android:id="@+id/navigation_movie"
		android:icon="@drawable/ic_movie_black_24dp"
		android:title="@string/movie" />

	<item
		android:id="@+id/navigation_tvshow"
		android:icon="@drawable/ic_tv_black_24dp"
		android:title="@string/tv_show" />

	<item
		android:id="@+id/navigation_favorite"
		android:icon="@drawable/ic_added_to_favorite"
		android:title="@string/favorite" />

</menu>
