<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="match_parent">

	<androidx.recyclerview.widget.RecyclerView
		android:id="@+id/rv_list_tvshow"
		style="@style/RecyclerViewStyle"
		tools:listitem="@layout/item_movie" />

	<TextView
		android:id="@+id/no_favorite"
		style="@style/TextStyle.Information"
		android:text="@string/no_favorites_yet" />

</RelativeLayout>