<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
	xmlns:app="http://schemas.android.com/apk/res-auto"
	xmlns:tools="http://schemas.android.com/tools"
	android:layout_width="match_parent"
	android:layout_height="150dp"
	android:layout_margin="@dimen/margin_tiny"
	android:clickable="true"
	android:focusable="true"
	android:foreground="?android:attr/selectableItemBackground"
	app:cardCornerRadius="4dp">

	<FrameLayout
		android:layout_width="match_parent"
		android:layout_height="match_parent">

		<ImageView
			android:id="@+id/img_poster"
			android:layout_width="match_parent"
			android:layout_height="match_parent"
			android:layout_gravity="bottom"
			android:contentDescription="@string/poster_image"
			android:scaleType="centerCrop"
			android:src="@drawable/ic_launcher_background"
			tools:src="@tools:sample/backgrounds/scenic" />

		<ImageView
			android:id="@+id/favorite"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_gravity="end"
			android:layout_margin="@dimen/margin_tiny"
			android:contentDescription="@string/favorite"
			android:src="@drawable/ic_added_to_favorite"
			android:visibility="gone" />

		<TextView
			android:id="@+id/tv_title"
			android:layout_width="match_parent"
			android:layout_height="wrap_content"
			android:layout_gravity="bottom"
			android:background="#99000000"
			android:gravity="center"
			android:lines="3"
			android:textColor="@android:color/white"
			android:textStyle="bold"
			tools:text="Movie Title" />
	</FrameLayout>

</androidx.cardview.widget.CardView>